<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_a_new_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="normal" />

    <ImageView
        android:id="@+id/ivDivider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/blue"
        app:srcCompat="?attr/actionBarDivider" />

    <EditText
        android:id="@+id/etEmpFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmpLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmpID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_employee_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/etEmpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn8H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/_8_hours_shift" />

        <Button
            android:id="@+id/btn12Hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/_12_hours_shift" />
    </LinearLayout>

</LinearLayout>